[gd_scene load_steps=7 format=3 uid="uid://nrpl8hbycohd"]

[ext_resource type="Script" path="res://player/lamp.gd" id="1_dyn1p"]
[ext_resource type="Texture2D" uid="uid://ce8ra8qf7fpe7" path="res://player/light_cone.png" id="2_jngpn"]
[ext_resource type="Texture2D" uid="uid://bboyttlg4ttr6" path="res://player/light_beam.png" id="3_02dxi"]
[ext_resource type="PackedScene" uid="uid://cmo2ww2ad7oww" path="res://damage_ray.tscn" id="4_ncxl7"]

[sub_resource type="Gradient" id="Gradient_l4ih7"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_510od"]
gradient = SubResource("Gradient_l4ih7")
width = 10
height = 10

[node name="Lamp" type="Node2D"]
script = ExtResource("1_dyn1p")

[node name="LightOrigin" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_510od")

[node name="LightCone" type="PointLight2D" parent="LightOrigin"]
color = Color(0.694118, 0.396078, 0.160784, 1)
energy = 1.35
blend_mode = 2
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 7.0
texture = ExtResource("2_jngpn")
offset = Vector2(200, 0)
texture_scale = 10.0

[node name="LightBeam" type="PointLight2D" parent="LightOrigin"]
scale = Vector2(36, 1)
color = Color(0.694118, 0.396078, 0.160784, 1)
energy = 3.0
blend_mode = 2
shadow_enabled = true
texture = ExtResource("3_02dxi")
offset = Vector2(16, 0)

[node name="LightBeamDamageRay" parent="LightOrigin" instance=ExtResource("4_ncxl7")]
target_position = Vector2(1150, 0)

[connection signal="beam_obstructed" from="LightOrigin/LightBeamDamageRay" to="." method="_on_light_beam_damage_ray_beam_obstructed"]
[connection signal="beam_unobstructed" from="LightOrigin/LightBeamDamageRay" to="." method="_on_light_beam_damage_ray_beam_unobstructed"]

[editable path="LightOrigin/LightBeamDamageRay"]
